--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </head>
 
-<body>
+<body class="bg-dark">
   <form class="  mt-5 mb-5 text-center  js-form">
     <input class="form-control d-inline-block w-25 ms-5 js-input" type="text" placeholder="Filim nomini kiriting" >
     <button class=" btn bg-info ms-3 js-button ">SEND</button>
   </form>
-  <ol class="js-list row g-5"></ol>
+  <ol class="js-list row g-5 "></ol>
 
 
 
