--- a/index.html
+++ b/index.html
@@ -12,10 +12,29 @@
 </head>
 
 <body class="bg-dark">
-  <form class="  mt-5 mb-5 text-center  js-form">
+
+<h1 class="text-center text-light mt-5">TV MOViES</h1>
+ 
+  <form class="  mt-5 mb-5 text-center col-12 col-lg-12 col-md-8 col-sm-6  js-form">
     <input class="form-control d-inline-block w-25 ms-5 js-input" type="text" placeholder="Filim nomini kiriting" >
     <button class=" btn bg-info ms-3 js-button ">SEND</button>
   </form>
+
+  <!-- <select class="js-select w-75 p-3 d-block text-center mx-auto bg-danger text-info mb-5 mt-5">
+    <option value="All">All</option>
+  </select> -->
+
+  <select class="js-select w-50 p-3 d-block  text-center mx-auto bg-info  mt-5">
+    <option value="All">All</option>
+  </select>
+
+  <select class="js-select2 w-50 p-3 d-block  text-center mx-auto bg-info mb-5 mt-5">
+    <option selected disabled>Films Sorte</option>
+    <option value="a-z">A-Z</option>
+    <option value="z-a">Z-A</option>
+
+  </select>
+
   <ol class="js-list row g-5 "></ol>
 
 
