--- a/index.html
+++ b/index.html
@@ -20,20 +20,20 @@
     <button class=" btn bg-info ms-3 js-button ">SEND</button>
   </form>
 
-  <!-- <select class="js-select w-75 p-3 d-block text-center mx-auto bg-danger text-info mb-5 mt-5">
-    <option value="All">All</option>
-  </select> -->
-
-  <select class="js-select w-50 p-3 d-block  text-center mx-auto bg-info  mt-5">
+<div class=" w-75 mx-auto d-flex align-items-center justify-content-between">
+  <select class="js-select w-25 p-3 d-inline-block  text-center mx-auto bg-dark text-light mb-5 mt-5 rounded hover">
     <option value="All">All</option>
   </select>
 
-  <select class="js-select2 w-50 p-3 d-block  text-center mx-auto bg-info mb-5 mt-5">
+  <select class="js-select2 w-25 p-3 d-inline-block  text-center mx-auto bg-dark text-light mb-5 mt-5 ms- rounded hover">
     <option selected disabled>Films Sorte</option>
     <option value="a-z">A-Z</option>
     <option value="z-a">Z-A</option>
 
   </select>
+</div>
+
+ 
 
   <ol class="js-list row g-5 "></ol>
 
